artifacthub/library/pod-security-policy/users/1.0.3/samples/psp-pods-allowed-user-ranges/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-users-allowed
  labels:
    app: nginx-users
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
