artifacthub/library/pod-security-policy/users/1.0.3/samples/psp-pods-allowed-user-ranges/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-users-disallowed
  labels:
    app: nginx-users
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsUser: 0
        runAsGroup: 0
